--- a/index.html
+++ b/index.html
@@ -312,6 +312,7 @@
     <script src="js/bootstrap.js" type="text/javascript"></script>
     <script src="js/jquery.min.js" type="text/javascript"></script>
     <script src="js/jquery.sticky.js" type="text/javascript"></script>
+    <script src="https://use.fontawesome.com/4fc5f49e02.js"></script>
 
   </body>
 </html>
