--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 				</div>
 				<div class="col-lg-3">
 					<!-- Resume download link -->
-					<a class="btn btn-default" href="TamaraNatasya_Resume.pdf" target="_blank"><i class="fa fa-file-text fa-3x"></i></a>
+					<a href="TamaraNatasya_Resume.pdf" target="_blank"><i class="fa fa-file-text fa-2x"></i></a>
 				</div>
 			</div><!--/.row -->
 		</div><!--/.container -->
@@ -239,9 +239,9 @@
         <div class="social-media">
           <p class="text-center">
             <!-- EDIT: Social Links. Replace # with your URL for each -->
-           <a href="mailto:t.nat493@gmail.com" target="_blank" class="mail"><i class="fa fa-envelope"></i></a>
-           <a href="linkedin.com/in/tnatasya" target="_blank"><i class="fa fa-linkedin-square"></i></a>
-           <a href="github.com/tnat93" target="_blank"><i class="fa fa-github"></i></a>
+           <a href="mailto:t.nat493@gmail.com" target="_blank" class="mail"><i class="fa fa-envelope fa-2x"></i></a>
+           <a href="linkedin.com/in/tnatasya" target="_blank"><i class="fa fa-linkedin-square fa-2x"></i></a>
+           <a href="github.com/tnat93" target="_blank"><i class="fa fa-github fa-2x"></i></a>
           </p>
         </div>
         <div class="row">
